# spectacles

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint-code.yml
app/: config.py  main.py
app/routers/: auth.py
